# warcio-rs

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: basic.rs  read_warc_gz.rs  write_warc_gz.rs  write_warc_on_stdout.rs
src/: lib.rs  warc_reader.rs  warc_record.rs  warc_writer.rs
